@@ -855,6 +855,10 @@ AC_CHECK_DECL(EVP_PKEY_set1_EC_KEY,
     [AC_DEFINE(XSEC_OPENSSL_HAVE_EC)],
     ,[#include <openssl/evp.h>])
 
+AC_CHECK_DECL(EVP_sha512,
+    [AC_DEFINE(XSEC_OPENSSL_HAVE_SHA2)],
+    ,[#include <openssl/evp.h>])
+
 AC_CHECK_DECL(EVP_CIPHER_CTX_set_padding,
 	[AC_DEFINE(XSEC_OPENSSL_CANSET_PADDING)],
 	,[#include <openssl/evp.h>])
