@@ -128,6 +128,7 @@
 
 #undef XSEC_OPENSSL_CONST_BUFFERS
 #undef XSEC_OPENSSL_HAVE_AES
+#undef XSEC_OPENSSL_HAVE_SHA2
 #undef XSEC_OPENSSL_HAVE_EC
 #undef XSEC_OPENSSL_CANSET_PADDING
 #undef XSEC_OPENSSL_D2IX509_CONST_BUFFER
